chore: add environment variables parsing
Added zod lib to validate the schema for the environment variables, to guarantee that all variables are configured in the envs on startup and avoid errors related to missing envs, increasing the quality of the application

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,21 @@
 services:
-  users-db:
+  movies-tickets-reservation-db:
     image: postgres:11
-    container_name: users-db
+    container_name: movies-tickets-reservation-db
     restart: always
     environment:
-      - POSTGRES_DB=users-db
+      - POSTGRES_DB=movies-tickets-reservation-db
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=123456
+    networks:
+      - movies-tickets-reservation-network
     ports:
       - 5432:5432
+    volumes:
+      - db:/var/lib/postgresql/data
+volumes:
+  db:
+    driver: local
+networks:
+  movies-tickets-reservation-network:
+    driver: bridge
