refactor: change the use of dotenv lib
Changed the import of .env file to the dev script in package json file because it is only needed in dev environment and not in production, where the environment variables will be inserted directly

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This side project is a backend system to make movie tickets reservation. The idea is to have movies available for reservation by users.",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --require dotenv/config src/index.ts"
   },
   "repository": {
     "type": "git",
