--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "This side project is a backend system to make movie tickets reservation. The idea is to have movies available for reservation by users.",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --require dotenv/config src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --require dotenv/config src/index.ts",
+    "format": "prettier --write .",
+    "lint": "eslint . ",
+    "lint:fix": "eslint . --fix "
   },
   "repository": {
     "type": "git",
@@ -26,8 +29,14 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/express": "^5.0.3",
+    "eslint": "^9.32.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   }
 }
