--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only --require dotenv/config src/index.ts",
     "format": "prettier --write .",
     "lint": "eslint . ",
-    "lint:fix": "eslint . --fix "
+    "lint:fix": "eslint . --fix ",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -16,7 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/raphael251/movie-tickets-reservation-system/issues"
   },
@@ -29,10 +30,13 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.32.0",
     "@types/express": "^5.0.3",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
