chore: setup jest

--- a/package.json
+++ b/package.json
@@ -35,16 +35,21 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.32.0",
+    "@jest/globals": "^30.0.5",
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.2",
     "@swc/plugin-transform-imports": "^9.0.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
+    "jest": "^30.0.5",
     "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0"
   }
