feat: users login

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Server Configuration
 SERVER_PORT=3000
 
+# JWT Configuration
+JWT_SECRET=jwt_secret
+JWT_EXPIRATION=300
+
 # Database Configuration
 DB_USERNAME=admin
 DB_PASSWORD=123456
