--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "typeorm": "^0.3.25",
     "zod": "^4.0.10"
@@ -42,6 +43,7 @@
     "@swc/plugin-transform-imports": "^9.0.0",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
