--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,6 @@ JWT_EXPIRATION=300
 DB_USERNAME=admin
 DB_PASSWORD=123456
 DB_DATABASE=movies-tickets-reservation-db
+DB_MIGRATIONS_PATH=./dist/src/migrations/*.js
 DB_HOST=localhost
 DB_PORT=5432
