--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "swc src --out-dir dist",
     "build:ci": "tsc && npm run build",
+    "check-types": "tsc --noEmit",
     "dev": "nodemon --require dotenv/config dist/src/index.js",
     "format": "prettier --write .",
     "lint": "eslint . ",
