--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,29 @@
 services:
+  movies-tickets-reservation-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: movies-tickets-reservation-api
+    restart: always
+    environment:
+      - NODE_ENV=production
+      - SERVER_PORT=3000
+
+      # JWT Configuration
+      - JWT_SECRET=your_jwt_secret
+      - JWT_EXPIRATION=300
+
+      # Database Configuration
+      - DB_USERNAME=admin
+      - DB_PASSWORD=123456
+      - DB_DATABASE=movies-tickets-reservation-db
+      - DB_MIGRATIONS_PATH=./dist/src/migrations/*.js
+      - DB_HOST=movies-tickets-reservation-db
+      - DB_PORT=5432
+    networks:
+      - movies-tickets-reservation-network
+    ports:
+      - 3000:3000
   movies-tickets-reservation-db:
     image: postgres:11
     container_name: movies-tickets-reservation-db
