--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "build": "swc src --out-dir dist",
     "build:ci": "tsc && npm run build",
     "check-types": "tsc --noEmit",
-    "dev": "nodemon --require dotenv/config dist/src/index.js",
+    "start:dev": "nodemon --require dotenv/config dist/src/index.js",
+    "start:prod": "npm run migration:run:prod && node dist/src/index.js",
     "format": "prettier --write .",
     "lint": "eslint . ",
     "lint:fix": "eslint . --fix ",
     "prepare": "husky",
     "test": "jest",
     "migration:generate": "typeorm-ts-node-esm migration:generate ./src/migrations/migration -d ./src/modules/shared/data-source/data-source.ts",
-    "migration:run": "typeorm-ts-node-esm migration:run -d ./src/modules/shared/data-source/data-source.ts",
+    "migration:run:dev": "typeorm-ts-node-esm migration:run -d ./src/modules/shared/data-source/data-source.ts",
+    "migration:run:prod": "typeorm-ts-node-esm migration:run -d ./dist/src/modules/shared/data-source/data-source.js",
     "migration:revert": "typeorm-ts-node-esm migration:revert -d ./src/modules/shared/data-source/data-source.ts"
   },
   "repository": {
