--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           task-definition: task-definition.json
           container-name: movie-tickets-reservation-system
-          image: ${{ steps.login-ecr.outputs.registry }}/portfolio-apps/movie-tickets-reservation-system:latest:latest
+          image: ${{ steps.login-ecr.outputs.registry }}/portfolio-apps/movie-tickets-reservation-system:latest
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
