chore(app-config): add db ssl config to envs

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ JWT_EXPIRATION=300
 # Database Configuration
 DB_USERNAME=admin
 DB_PASSWORD=123456
+DB_SSL_ENABLED=false
 DB_DATABASE=movies-tickets-reservation-db
 DB_MIGRATIONS_PATH=./dist/src/migrations/*.js
 DB_HOST=localhost
