test: setup e2e tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . ",
     "lint:fix": "eslint . --fix ",
     "prepare": "husky",
-    "test": "jest",
+    "test:unit": "jest --detectOpenHandles --config=./jest.config.unit.js",
+    "test:e2e": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --runInBand --detectOpenHandles --config=./jest.config.e2e.js",
     "migration:generate": "typeorm-ts-node-esm migration:generate ./src/migrations/migration -d ./src/modules/shared/data-source/data-source.ts",
     "migration:run:dev": "typeorm-ts-node-esm migration:run -d ./src/modules/shared/data-source/data-source.ts",
     "migration:run:prod": "typeorm-ts-node-esm migration:run -d ./dist/src/modules/shared/data-source/data-source.js",
@@ -51,6 +52,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
@@ -58,6 +60,7 @@
     "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
