chore(envs): adjust environment variables files and load config

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "swc src --out-dir dist",
     "build:ci": "tsc && npm run build",
     "check-types": "tsc --noEmit",
-    "start:dev": "nodemon --require dotenv/config dist/src/index.js",
+    "start:dev": "nodemon dist/src/index.js",
     "start:prod": "npm run migration:run:prod && node dist/src/index.js",
     "format": "prettier --write .",
     "lint": "eslint . ",
     "lint:fix": "eslint . --fix ",
     "prepare": "husky",
     "test:unit": "jest --detectOpenHandles --config=./jest.config.unit.js",
-    "test:e2e": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --runInBand --detectOpenHandles --config=./jest.config.e2e.js",
+    "test:e2e": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules --require dotenv/config\" DOTENV_CONFIG_PATH=\".env.test\" jest --runInBand --detectOpenHandles --config=./jest.config.e2e.js",
     "migration:generate": "typeorm-ts-node-esm migration:generate ./src/migrations/migration -d ./src/modules/shared/data-source/data-source.ts",
     "migration:run:dev": "typeorm-ts-node-esm migration:run -d ./src/modules/shared/data-source/data-source.ts",
     "migration:run:prod": "typeorm-ts-node-esm migration:run -d ./dist/src/modules/shared/data-source/data-source.js",
