chore(gh-e2e-workflow): add postgres port to fix the connection error

--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -8,6 +8,8 @@ jobs:
 
     services:
       postgres:
+        ports:
+          - 5432:5432
         image: postgres
         env:
           POSTGRES_DB: test-db
