--- a/.github/workflows/e2e-test.yaml
+++ b/.github/workflows/e2e-test.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Wait for Postgres
         run: |
-          until pg_isready -h postgres -p 5432 -U admin; do
+          until pg_isready -h localhost -p 5432 -U admin; do
             echo "Waiting for Postgres..."
             sleep 2
           done
@@ -58,5 +58,5 @@ jobs:
           DB_PASSWORD: 123456
           DB_DATABASE: test-db
           DB_MIGRATIONS_PATH: ./dist/src/migrations/*.js
-          DB_HOST: postgres
+          DB_HOST: localhost
           DB_PORT: 5432
