--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "typeorm": "^0.3.25",
+    "winston": "^3.17.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
