--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "inversify": "^7.9.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25",
     "winston": "^3.17.0",
     "zod": "^4.0.14"
