--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/raphael251/movie-tickets-reservation-system#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "inversify": "^7.9.1",
@@ -53,6 +54,7 @@
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.2",
     "@swc/plugin-transform-imports": "^9.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
