chore(swagger): separate swagger config and create feature flag

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ DB_DATABASE=movies-tickets-reservation-db
 DB_MIGRATIONS_PATH=./dist/src/migrations/*.js
 DB_HOST=localhost
 DB_PORT=5432
+
+# Swagger Docs Configuration
+SWAGGER_DOCS_CONFIG={ "serverUrl": "http://localhost:3000", "apisPaths": ["./dist/src/modules/*/external/express/router.js", "./src/modules/shared/swagger/definitions.yaml"]  }
