--- a/src/event-sender/.env.example
+++ b/src/event-sender/.env.example
@@ -6,3 +6,10 @@ DB_DATABASE=movies-tickets-reservation-db
 DB_MIGRATIONS_PATH=./dist/src/migrations/*.js
 DB_HOST=localhost
 DB_PORT=5432
+
+# Email Configuration
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
