--- a/src/event-sender/package.json
+++ b/src/event-sender/package.json
@@ -16,5 +16,8 @@
   "type": "module",
   "dependencies": {
     "nodemailer": "^7.0.6"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^7.0.1"
   }
 }
