--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,15 +2,19 @@ FROM node:22-alpine AS builder
 RUN apk update
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY . .
-RUN npm install
+COPY src/api ./src/api
+COPY tsconfig.json .
+COPY package.json .
+COPY package-lock.json .
+RUN npm ci
+WORKDIR /app/src/api
 RUN npm run build:ci
 
 FROM node:22-alpine AS installer
 RUN apk update
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/src/api/dist ./dist
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/package-lock.json ./package-lock.json
 RUN touch /usr/local/bin/husky && chmod +x /usr/local/bin/husky
@@ -24,7 +28,6 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nodejs
 USER nodejs
 COPY --from=installer /app .
-COPY certs/rds-ca.pem /app/certs/rds-ca.pem
 
 EXPOSE 80
 
