--- a/src/api/package.json
+++ b/src/api/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.25",
     "winston": "^3.17.0",
     "zod": "^4.0.14"
